fix align right section

--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ nav {
 
 .center {
     margin: auto;
+    justify-content: center;
 }
 
 .flexc {
@@ -89,7 +90,8 @@ nav {
 .mr30 {
     margin-right: 30px;
 }
-.navfont{
+
+.navfont {
     font-family: 'Roboto', sans-serif;
 }
 
@@ -100,7 +102,7 @@ nav {
 
 .loginfont {
     font-family: 'Roboto', sans-serif;
-    color: green;  
+    color: green;
 }
 
 .citation {
@@ -108,6 +110,11 @@ nav {
     font-family: 'Caveat', cursive;
     color: white;
     text-align: center;
+    width: 80%;
+}
+
+#align_txt {
+    align-items: center;
 }
 
 .citation_livreor {
@@ -222,7 +229,7 @@ nav {
 }
 
 .txtalighr {
-    text-align: right;    
+    text-align: right;
     margin-right: 20px;
     margin-bottom: 20px;
 }
@@ -247,7 +254,7 @@ footer {
 
 .noscroll {
     overflow: hidden;
-    position:fixed;
+    position: fixed;
 }
 
 #livreorbutton {
